# winxmerge

./: CLAUDE.md  Cargo.toml  Makefile  README.md  Trunk.toml  build.rs  handover.md  index.html
.cargo/: config.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy-docs.yml  deploy-pages.yml  release.yml
assets/icons/: app-icon.icns
doc/: editor_diff_and_plan.md  slint.md  winmerge_3way_diff_analysis.md  winmerge_3way_spec.md  winmerge_editor.md  winxmerge_editor.md
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/en/: index.mdx
docs/src/content/docs/en/features/: csv-excel.md  export.md  file-comparison.md  filters.md  folder-comparison.md  image-comparison.md  inline-editing.md  search-replace.md  syntax-highlighting.md  three-way-merge.md
docs/src/content/docs/en/guides/: installation.md  introduction.md  quickstart.md
docs/src/content/docs/en/integrations/: git.md  macos-finder.md  plugins.md
docs/src/content/docs/en/reference/: keyboard-shortcuts.md  settings.md  tech-stack.md
docs/src/content/docs/ja/: index.mdx
docs/src/content/docs/ja/features/: csv-excel.md  export.md  file-comparison.md  filters.md  folder-comparison.md  image-comparison.md  inline-editing.md  search-replace.md  syntax-highlighting.md  three-way-merge.md
docs/src/content/docs/ja/guides/: installation.md  introduction.md  quickstart.md
docs/src/content/docs/ja/integrations/: git.md  macos-finder.md  plugins.md
docs/src/content/docs/ja/reference/: keyboard-shortcuts.md  settings.md  tech-stack.md
macos/: Info.plist  WinXMerge.entitlements
macos/FinderSync/: FinderSync.entitlements  FinderSyncExtension.swift  Info.plist
macos/FinderSync/FinderSync.xcodeproj/: project.pbxproj
scripts/: build-macos-bundle.sh
src/: app.rs  archive.rs  csv.rs  encoding.rs  excel.rs  export.rs  highlight.rs  image_compare.rs  ipc.rs  lib.rs  main.rs  settings.rs  wasm.rs
src/app/: diff_navigation.rs  diff_text.rs  folder.rs  helpers.rs  mod.rs  options.rs  pane_buffer.rs  save_export.rs  search.rs  tab.rs  table.rs  text_edit.rs  three_way.rs
src/diff/: engine.rs  folder.rs  mod.rs  three_way.rs
src/models/: diff_line.rs  folder_item.rs  mod.rs
testdata/: base.csv  base.tsv  base.txt  large_base.txt  large_left.txt  large_left_3way.txt  large_right.txt  large_right_3way.txt  left.csv  left.tsv  left.txt  left_3way.txt  right.csv  right.tsv  right.txt  right_3way.txt
testdata/dir_left/: .gitignore  Cargo.toml  README.md
testdata/dir_left/src/: config.rs  lib.rs  main.rs
testdata/dir_left/src/utils/: mod.rs  parser.rs
testdata/dir_left/tests/: integration.rs  unit.rs
testdata/dir_right/: Cargo.toml  README.md
testdata/dir_right/docs/: api.md
testdata/dir_right/src/: config.rs  lib.rs  main.rs
testdata/dir_right/src/utils/: mod.rs  parser.rs  validator.rs
testdata/dir_right/tests/: e2e.rs  integration.rs
translations/ja/LC_MESSAGES/: winxmerge.po
ui/: main.slint  theme.slint  wasm-app.slint
ui/dialogs/: file-browser.slint  new-table-dialog.slint  open-dialog.slint  options-dialog.slint  save-confirm-dialog.slint  shortcuts-dialog.slint
ui/widgets/: csv-view.slint  diff-view-3way.slint  diff-view.slint  excel-view.slint  folder-view.slint  image-view.slint  tab-bar.slint  table-grid-view.slint
