[package]
name = "winxmerge"
version = "0.6.0"
edition = "2024"

[dependencies]
slint = "1.15.1"
similar = "2.6"
rfd = "0.15"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
arboard = "3"
chardetng = "0.1"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-json = "0.24"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-ruby = "0.23"

[build-dependencies]
slint-build = "1.15.1"
