[package]
name = "winxmerge"
version = "0.31.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

# The binary requires the "desktop" feature so that trunk (WASM builds)
# skips it and falls back to building the cdylib lib target instead.
[[bin]]
name = "winxmerge"
required-features = ["desktop"]

[dependencies]
slint = "1.15.1"
similar = "2.6"
regex = "1"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop-only dependencies (not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
dirs = "6"
arboard = "3"
open = "5"
chardetng = "0.1"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-json = "0.24"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.5"
zip = "2"
calamine = "0.26"
image = "0.25"
rust_xlsxwriter = "0.80"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document", "Element", "EventTarget",
    "HtmlInputElement", "File", "FileList", "Blob",
    "Event", "Window", "console",
] }
console_error_panic_hook = "0.1"

[build-dependencies]
slint-build = "1.15.1"
winres = { version = "0.1", optional = true }

[features]
# Enable on Windows builds to embed the .ico into the executable
embed-icon = ["winres"]
# Required to build the native desktop binary (not used for WASM/trunk builds)
desktop = []

[package.metadata.bundle]
name = "WinXMerge"
identifier = "io.github.masak1yu.winxmerge"
icon = ["assets/icons/app-icon-32.png", "assets/icons/app-icon-64.png",
        "assets/icons/app-icon-128.png", "assets/icons/app-icon-256.png",
        "assets/icons/app-icon-512.png", "assets/icons/app-icon.icns"]
version = "0.31.0"
copyright = "WinXMerge contributors"
category = "Developer Tool"
short_description = "Cross-platform file diff and merge tool"
