[package]
name = "myapp"
version = "0.2.0"
edition = "2021"
authors = ["Alice <alice@example.com>"]
description = "Example Axum web service"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-full", "cors", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
prometheus = { version = "0.13", features = ["process"] }
